--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-aiohttp==3.10.5
 aiohttp-devtools==1.1.2
 aiohttp-jinja2==1.6
 aiohttp-socks==0.9.0
+aiohttp==3.10.5
 black==24.3.0
 cryptography==42.0.5
+fake-useragent==1.5.1
 flake8==7.0.0
-requests[socks]==2.31.0
 orjson==3.10.3
+requests[socks]==2.31.0
 sentry-sdk==2.5.0
