--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ aiohttp-devtools==1.1.2
 aiohttp-jinja2==1.6
 aiohttp-socks==0.9.0
 aiohttp==3.10.5
+alembic==1.16.5
 black==24.3.0
 cryptography==42.0.5
 fake-useragent==1.5.1
 flake8==7.0.0
-orjson==3.10.3
+orjson==3.11.3
+psycopg[binary]==3.2.10
 requests[socks]==2.31.0
 sentry-sdk==2.5.0
+sqlalchemy==2.0.43
