--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,6 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@v1.8.0
         with:
+          branch: main
           git_remote_url: 'ssh://dokku@v2202505276881345727.luckysrv.de:22/amtrak.live'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
